added readiness api
